<resources>
    <string name="app_name" translatable="false">training hub</string>

    <string name="facebook_app_id" translatable="false">906160613172861</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb906160613172861</string>

    <string name="client_id" translatable="false">98288831859-opb8iel4cg9l4fchdhpekuvoifai51ch.apps.googleusercontent.com </string>
    <string name="secret" translatable="false">cM6Hc5nZrO5zNrFlpkxJ1Ku8 </string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_your_password">forgot your password</string>
    <string name="create_new_account">create new account</string>
    <string name="hello_there">Login to your account</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="register">Register Now</string>
    <string name="register_title">Create a new account</string>
    <string name="have_an_account">Already have an account?</string>
    <string name="name">Username</string>
    <string name="categories">Categories</string>
    <string name="for_you">For you</string>
    <string name="RecentlyAdded">Recently Added</string>
    <string name="dummy_course_name" translatable="false">The Complete Web Developer Course 2.0</string>
    <string name="dummy_course_desc" translatable="false">The Complete Web Developer Course is great course where you will learn a lot of web techologies like Html ,Css ,javascript ,Jquery ,Angular and Saas also backEnd Technology like php laravel </string>
    <string name="home">home</string>
    <string name="my_courses">my courses</string>
    <string name="account">Account</string>
    <string name="instructors">instructors</string>
    <string name="dummy_instructor_name">Ahmed Khaled</string>
    <string name="dummy_course_duration">70h</string>
    <string name="center">center</string>
    <string name="dummy_center_bio">itc is a traiing center established in 1990 , itc offers training courses in all fields with well trained instructors</string>
    <string name="dummy_center_name">ITC</string>
    <string name="description">description</string>
    <string name="course_hours">%1$s hours</string>
    <string name="course_duration">%s h</string>
    <string name="take_this_course">take this course</string>
    <string name="dummy_name">Ahmed Khaled</string>
    <string name="dummy_price">Ahmed Khaled</string>
    <string name="Lorem_Ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="server_error">something went wrong, try again</string>
    <string name="no_reviews">There is no Reviews for this course</string>
    <string name="reviews">reviews</string>
    <string name="see_course_reviews">See Course Reviews</string>
    <string name="back_to_course">Back to Course</string>
    <string name="dummy_chapter_desc">in this chapter you will learn to design layouts using xml
        , we will discuss how deal with linear , relative ,frame,grid layouts , andfinally constraint layout ,
        we will benefit from the power of this layout</string>
    <string name="syllabus">syllabus</string>
    <string name="back_to_home">back to home</string>
    <string name="no_connection">There Is No Internet Connection</string>
    <string name="dummy_group_name">Group 15</string>
    <string name="dummy_group_startdate">12/2/1996</string>
    <string name="error_enrolling_to_course">Error happened while Enrolling to tis course</string>
    <string name="retry">retry</string>
    <string name="error_message">something went wrong. Please try again</string>
    <string name="successful_registration">Now you have a new account</string>
    <string name="dummy_instructor_bio">Ahmed khaled is an android developer with 2 years experience</string>
    <string name="change_password">change password</string>
    <string name="wishlist">wishlist</string>
    <string name="about">about</string>
    <string name="signout">sign out</string>
    <string name="profile">profile</string>
    <string name="signin">sign in</string>
    <string name="student_name_ar">student name in Arabic *</string>
    <string name="student_name_en">student name in English *</string>
    <string name="mobile_num">mobile number *</string>
    <string name="state">state *</string>
    <string name="city">city *</string>
    <string name="address">Address *</string>
    <string name="id_number">National Id number *</string>
    <string name="mobile_num_sec">secondary mobile number (optional)</string>
    <string name="passport_num">passport number (optional)</string>
    <string name="faculty">faculty *</string>
    <string name="degree">degree *</string>
    <string name="error_registering_student">"Error happened while registering student "</string>
    <string name="required">required</string>
    <string name="continue_with_email">Continue With Email</string>
    <string name="continue_with_gmail">continue with gmail</string>


    <string-array name="stateList">
        <item>القاهره</item>
        <item>الدقهليه</item>
        <item>الاسكندريه</item>
    </string-array>

    <string-array name="facultyList">
        <item>هندسه</item>
        <item>تجاره</item>
    </string-array>

    <string-array name="degreeList">
        <item>طالب</item>
        <item>خريح </item>
    </string-array>

</resources>
