<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="network"
            type="com.example.traininghub.models.NetworkState" />


    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activities.ProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/container"
        tools:context=".view.activities.ProfileActivity">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:id="@+id/profile_img"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/heart_no"
            android:focusable="true"
            android:focusableInTouchMode="true"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nameAr"
            app:errorIconDrawable="@drawable/ic_error_black_24dp"

            app:layout_constraintTop_toBottomOf="@id/profile_img"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/student_name_ar"
                style="@style/profile_input_style"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nameEn"
            app:layout_constraintTop_toBottomOf="@id/nameAr"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/student_name_en"
                style="@style/profile_input_style"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            app:layout_constraintTop_toBottomOf="@id/nameEn"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                style="@style/profile_input_style"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mobile_num"
            app:layout_constraintTop_toBottomOf="@id/email"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile_num"
                android:inputType="number"
                style="@style/profile_input_style"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/state"
            app:layout_constraintTop_toBottomOf="@id/mobile_num"
            style="@style/profile_input_style"
            android:hint="@string/state"
            />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/city"
            app:layout_constraintTop_toBottomOf="@id/state"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city"
                android:inputType="text"
                style="@style/profile_input_style"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/address"
            app:layout_constraintTop_toBottomOf="@id/city"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:inputType="text"
                style="@style/profile_input_style"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/id_number"
            app:layout_constraintTop_toBottomOf="@id/address"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/id_number"
                android:inputType="number"
                style="@style/profile_input_style"
                android:ems="14"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/id_img"
            android:src="@drawable/user_id"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toBottomOf="@id/id_number"
            app:layout_constraintStart_toStartOf="@id/id_number"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="attach your id image"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@id/id_img"
            app:layout_constraintStart_toEndOf="@id/id_img"
            app:layout_constraintEnd_toEndOf="@id/id_number"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            />

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/faculty"
            app:layout_constraintTop_toBottomOf="@id/id_img"
            style="@style/profile_input_style"
            android:hint="@string/faculty"
            />


        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/degree"
            app:layout_constraintTop_toBottomOf="@id/faculty"
            android:hint="@string/degree"
            android:background="@color/gray"
            android:layout_margin="5dp"
            />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mobile_num_sec"
            app:layout_constraintTop_toBottomOf="@id/degree"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile_num_sec"
                android:inputType="number"
                style="@style/profile_input_style"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passport_num"
            app:layout_constraintTop_toBottomOf="@id/mobile_num_sec"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passport_num"
                android:inputType="number"
                style="@style/profile_input_style"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register"
            android:text="@{network.loading?null:@string/register}"
            android:enabled="@{!network.loading}"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/passport_num"
            android:background="@color/pink"
            />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{network==null?8:network.visibility}"
            app:layout_constraintTop_toTopOf="@id/register"
            app:layout_constraintBottom_toBottomOf="@id/register"
            app:layout_constraintStart_toStartOf="@id/register"
            app:layout_constraintEnd_toEndOf="@id/register"
            android:indeterminateTint="@color/white"
            android:elevation="7dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>