<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity"
    >

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/bg"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/course_overview_container"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardElevation="15dp"
        app:cardCornerRadius="15dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"

            >

            <androidx.viewpager.widget.ViewPager
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:id="@+id/course_media"
                tools:background="@drawable/bg"

                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                />

            <com.example.traininghub.helpers.GrostesqueTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/course_media"
                tools:text="@string/dummy_course_name"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/course_media"
                app:layout_constraintEnd_toEndOf="@id/course_media"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="5dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/course_detail_container"
        app:cardElevation="15dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintTop_toBottomOf="@id/course_overview_container"
        app:layout_constraintStart_toStartOf="@id/course_overview_container"
        app:layout_constraintEnd_toEndOf="@id/course_overview_container"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"

            >

            <com.example.traininghub.helpers.GrostesqueTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/course_desc"
                android:text="@string/dummy_course_desc"
                android:textSize="15sp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"

                />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <com.example.traininghub.helpers.GrostesqueTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/instructors_label"
        android:text="@string/instructors"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/course_detail_container"
        app:layout_constraintStart_toStartOf="@id/course_detail_container"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/course_Instructor_container"
        app:cardElevation="15dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintTop_toBottomOf="@id/instructors_label"
        app:layout_constraintStart_toStartOf="@id/course_overview_container"
        app:layout_constraintEnd_toEndOf="@id/course_overview_container"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"

            >

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/instructors_recycler"
                app:layout_constraintTop_toTopOf="parent"
                />




        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>